--- a/style.css
+++ b/style.css
@@ -4,13 +4,25 @@ span {
 
 body {
     text-align: center;
-    background-image:url("background/pokedex.png")
+    background-image:url("background/pokedex.png");
+    font-family: 'Lato', sans-serif;
 }
 
 img {
     background-image:url("background/pk_bg2.jpg");
     background-size:100%;
-    border-radius:5px;
+    border-radius:50px;
+}
+
+#inputbox {
+    padding:10px;
+}
+
+button{
+    color:white;
+    border-radius:50px;
+    background-image: linear-gradient(to left, #18cca8, #a0d996);
+    padding:10px;
 }
 
 #pokemonstatchart{
@@ -21,6 +33,6 @@ img {
 #screen {
     margin:5%;
     border:10px solid lightgrey;
-    height:725px;
+    height:800px;
     overflow: scroll;
 }
