--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/*Basic CSS for overall layout*/
+
 span {
     text-transform: capitalize;
     font-weight:100;
@@ -51,6 +53,11 @@ button{
     font-size:10px;
 }
 
+#damageoverview {
+    color: #444444;
+    text-align:center;
+}
+
 h4 {
     font-weight:100;
     color: rgb(33,131,156);
@@ -69,4 +76,143 @@ h4 {
     padding:10px;
     border-radius:10px;
     background-color: rgba(186, 186, 186,0.5);
+}
+
+/*CSS setting to group up the overview by respective type*/
+
+#pokemontype1:empty{
+    border: none;
+}
+#pokemontype1 {
+    border : 1px solid white;
+    padding : 1px 3px 1px 3px;
+    border-radius: 10px;
+    margin:3px;
+}
+
+#pokemontype2:empty{
+    border: none;
+}
+#pokemontype2 {
+    border : 1px solid white;
+    padding : 1px 3px 1px 3px;
+    border-radius: 10px;
+    margin:3px;
+}
+
+#doubledamagefrom:empty { 
+    border: none;
+}
+#doubledamagefrom {
+    border : 1px solid white;
+    padding : 1px 3px 1px 3px;
+    border-radius: 10px;
+}
+
+
+#doubledamagefrom2:empty { 
+    border: none;
+}
+#doubledamagefrom2 {
+    border : 1px solid white;
+    padding : 1px 3px 1px 3px;
+    border-radius: 10px;
+}
+
+#doubledamageto:empty { 
+    border: none;
+}
+#doubledamageto {
+    border : 1px solid white;
+    padding : 1px 3px 1px 3px;
+    border-radius: 10px;
+}
+
+
+#doubledamageto2:empty { 
+    border: none;
+}
+#doubledamageto2 {
+    border : 1px solid white;
+    padding : 1px 3px 1px 3px;
+    border-radius: 10px;
+}
+
+#halfamagefrom:empty { 
+    border: none;
+}
+#halfdamagefrom {
+    border : 1px solid white;
+    padding : 1px 3px 1px 3px;
+    border-radius: 10px;
+}
+
+
+#halfdamagefrom2:empty { 
+    border: none;
+}
+#halfdamagefrom2 {
+    border : 1px solid white;
+    padding : 1px 3px 1px 3px;
+    border-radius: 10px;
+}
+
+#halfdamageto:empty { 
+    border: none;
+}
+#halfdamageto {
+    border : 1px solid white;
+    padding : 1px 3px 1px 3px;
+    border-radius: 10px;
+}
+
+
+#halfdamageto2:empty { 
+    border: none;
+}
+
+#halfdamageto2 {
+    border : 1px solid white;
+    padding : 1px 3px 1px 3px;
+    border-radius: 10px;
+}
+
+
+#nodamagefrom:empty { 
+    border: none;
+}
+#nodamagefrom {
+    border : 1px solid white;
+    padding : 1px 3px 1px 3px;
+    border-radius: 10px;
+}
+
+
+#nodamagefrom2:empty { 
+    border: none;
+}
+#nodamagefrom2 {
+    border : 1px solid white;
+    padding : 1px 3px 1px 3px;
+    border-radius: 10px;
+}
+
+#nodamageto:empty { 
+    border: none;
+}
+#nodamageto {
+    border : 1px solid white;
+    padding : 1px 3px 1px 3px;
+    border-radius: 10px;
+}
+
+
+#nodamageto2:empty { 
+    border: none;
+}
+
+#nodamageto2 {
+    border : 1px solid white;
+    padding : 1px 3px 1px 3px;
+    border-radius: 10px;
 }
