--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ span {
 
 body {
     text-align: center;
-    background-image:url("background/pokedex.png");
+    background-image:url("images/pokedex.png");
     font-family: 'Lato', sans-serif;
     color: white;
 }
@@ -17,7 +17,7 @@ body {
 }
 
 #pokemonimg img {
-    background-image:url("background/pk_bg.jpg");
+    background-image:url("images/pk_bg.jpg");
     background-size:100%;
     border-radius:50px;
 }
