--- a/style.css
+++ b/style.css
@@ -47,6 +47,8 @@ button{
 #pokemonstatchart{
     font-size:11px;
     text-transform: capitalize;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #disclaimer {
@@ -60,12 +62,14 @@ button{
 h4 {
     font-weight:100;
     color: rgb(33,131,156);
-    padding:3px;
+    padding:3px 30px 3px 30px;
     font-size:20px;
     border-radius: 10px;
     background-color: white;
     border: 1px solid rgb(33,131,156);
     box-shadow: 0 0 0 2px rgba(255,255,255,0.8);
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #screen {
@@ -120,4 +124,10 @@ h4 {
     border : 1px solid white;
     padding : 1px 3px 1px 3px;
     border-radius: 10px;
+}
+
+@media (max-width:422px) {
+    #screen {
+        font-size : 80%;
+    }
 }
